Update item's description

--- a/chitietsanpham.html
+++ b/chitietsanpham.html
@@ -38,27 +38,10 @@
             </div>
             <div class="buy-btn" @click="onAddToCart()">THÊM VÀO GIỎ HÀNG</div>
             <br />
-            <div class="more-detail">
-              <ul>
-                <li>
-                  Màu sắc đang có sẵn (cập nhật ngày 01/12/2021): Black, Silver,
-                  Midnight Blue.
-                </li>
-                <li>
-                  Sony WH-1000XM4 tiếp tục giữ vững ngôi vị tai nghe chống ồn
-                  tốt nhất trên thị trường hiện nay
-                </li>
-                <li>Bluetooth 5.0 cùng khả năng kết nối 2 thiết bị</li>
-                <li>Thời lượng pin 30h, sạc nhanh 5 phút</li>
-                <li>
-                  Chế độ speak to chat thông minh duy nhất chỉ có trên
-                  WH-1000XM4
-                </li>
-                <li>
-                  Sony WH-1000XM4 là tai nghe đầu tiên của Sony được trang bị
-                  DSEE EXTREME
-                </li>
-              </ul>
+            <div class="more-detail" style="text-align:justify;">
+              
+                {{ product.descriptions }}
+              
             </div>
           </div>
         </div>
