Update footer; Add lienhe.html, Bill layout; Update landing page

--- a/dangnhap.html
+++ b/dangnhap.html
@@ -26,6 +26,7 @@
               <h2>{{ user.username }}</h2>
               <div class="login-func">
                 <div class="member-btn" @click="onLogout()">ĐĂNG XUẤT</div>
+                <div class="member-btn" @click="onRebill()">XEM ĐƠN ĐÃ ĐẶT </div>
               </div>
             </div>
           </div>
