--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="main-container">
             <div class="main-promo">
-                <a href=""><img src="assets/images/banners/homeBanner1.png" alt=""></a>
+                <a href=""><img src="assets/images/banners/brandBanner.jpg" alt=""></a>
                 <!-- <img style="visibility: hidden;" src="assets/images/banners/homeBanner2.png" alt="">
             <img style="visibility: hidden;" src="assets/images/banners/homeBanner3.png" alt=""> -->
             </div>
@@ -124,25 +124,25 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="new-items"><a href="chitietsanpham.html?productId=2">
-                                <div class="new-items-img"><img src="assets/images/products/focal_celestee.jpg" alt="">
+                        <div class="new-items"><a href="chitietsanpham.html?productId=11">
+                                <div class="new-items-img"><img src="assets/images/products/wfc500.jpg" alt="">
                                 </div>
                                 <div class="new-items-data">
-                                    <a class="new-items-data--title" href="chitietsanpham.html?productId=52">
-                                        <p>Focal Celestee</p>
+                                    <a class="new-items-data--title" href="chitietsanpham.html?productId=11">
+                                        <p>Sony WF-C500</p>
                                     </a>
-                                    <div class="newprice">29.990.000 đ</div>
+                                    <div class="newprice">1.990.000 đ</div>
                                 </div>
                             </a>
                         </div>
-                        <div class="new-items"><a href="chitietsanpham.html?productId=2">
-                                <div class="new-items-img"><img src="assets/images/products/focal_celestee.jpg" alt="">
+                        <div class="new-items"><a href="chitietsanpham.html?productId=20">
+                                <div class="new-items-img"><img src="assets/images/products/moondrop_starfield.png" alt="">
                                 </div>
                                 <div class="new-items-data">
-                                    <a class="new-items-data--title" href="chitietsanpham.html?productId=52">
-                                        <p>Focal Celestee</p>
+                                    <a class="new-items-data--title" href="chitietsanpham.html?productId=20">
+                                        <p>Moondrop Starfield</p>
                                     </a>
-                                    <div class="newprice">29.990.000 đ</div>
+                                    <div class="newprice">2.890.000 đ</div>
                                 </div>
                             </a>
                         </div>
