--- a/trangchu.html
+++ b/trangchu.html
@@ -66,23 +66,23 @@
               <div class="brand-filter-title">THƯƠNG HIỆU</div>
               <div class="brand-container">
                 <label class="container">
-                  <input type="checkbox"  value="One" />
-                  <span class="checkmark"></span> Apple
+                  <input type="checkbox" id="Apple" :value="productBrand.APPLE" v-model="checkedBrands" />
+                  <span class="checkmark" ></span> APPLE
                 </label>
                 <label class="container">
-                  <input type="checkbox"  value="One" />
+                  <input type="checkbox"  id="" :value="productBrand.FOCAL" v-model="checkedBrands" :defaultValue="checked" />
                   <span class="checkmark"></span> Focal
                 </label>
                 <label class="container">
-                  <input type="checkbox"  value="One" />
+                  <input type="checkbox"  id="HIFIMAN" :value="productBrand.HIFIMAN" v-model="checkedBrands" />
                   <span class="checkmark"></span> HiFiMan
                 </label>
                 <label class="container">
-                  <input type="checkbox"  value="One" />
+                  <input type="checkbox"  id="MOONDROP" :value="productBrand.MOONDROP" v-model="checkedBrands" />
                   <span class="checkmark"></span> MOONDROP
                 </label>
                 <label class="container">
-                  <input type="checkbox"  value="One" />
+                  <input type="checkbox"  id="SONY" :value="productBrand.SONY" v-model="checkedBrands" />
                   <span class="checkmark"></span> SONY
                 </label>
               </div>
