--- a/trangchu.html
+++ b/trangchu.html
@@ -91,9 +91,9 @@
               <div class="brand-filter-title">KHOẢNG GIÁ</div>
               <div class="price-container">
                 Chọn khoảng giá mong muốn.
-                <input type="number" name="" id="price-input" />
+                <input type="number" name="" id="price-input" v-model="minPrice" />
                 <span>-</span>
-                <input type="number" name="" id="price-input" />
+                <input type="number" name="" id="price-input" v-model="maxPrice" />
               </div>
             </div>
           </div>
