--- a/chitietsanpham.html
+++ b/chitietsanpham.html
@@ -39,9 +39,9 @@
             <div class="buy-btn" @click="onAddToCart()">THÊM VÀO GIỎ HÀNG</div>
             <br />
             <div class="more-detail" style="text-align:justify;">
-              
-                {{ product.descriptions }}
-              
+              <ul>
+                <li v-for="item in product.descriptions">{{ item }}</li>
+              </ul>
             </div>
           </div>
         </div>
