--- a/dathangthanhcong.html
+++ b/dathangthanhcong.html
@@ -38,7 +38,7 @@
                         </li>
                     </ul>
                     <ul class="cart-table">
-                        <li v-for="(item, index) in payment.items">
+                        <li v-for="(item, index) in payment.items" style="margin-top: 5px; margin-bottom: 5px;">
                             <div style="display: flex; justify-content: left;">{{ index + 1}}</div>
                             <div style="margin-left: 6.5%; width: 25%;"><img :src="item.image"
                                     style="height: 100px;"> {{ item.name }}
